iptables.up.rules
# Generated by iptables-save v1.6.0 on Mon Feb 12 18:36:13 2018
*filter
:INPUT ACCEPT [1908134:1294518282]
:FORWARD ACCEPT [3615708:2501404180]
:OUTPUT ACCEPT [1436945:444622639]
-A INPUT -p tcp -m tcp --dport 10050 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10051 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10052:10060 -j ACCEPT
COMMIT
# Completed on Mon Feb 12 18:36:13 2018
*nat
:PREROUTING ACCEPT [1525:231071]
:INPUT ACCEPT [860:44188]
:OUTPUT ACCEPT [53:3180]
:POSTROUTING ACCEPT [120:6608]
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 5950:8000 -j DNAT --to-destination 192.168.10.2:5950-8000
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p udp -m udp --dport 5950:8000 -j DNAT --to-destination 192.168.10.2:5950-8000
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 8007:9999 -j DNAT --to-destination 192.168.10.2:8001-9999
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p udp -m udp --dport 8007:9999 -j DNAT --to-destination 192.168.10.2:8001-9999
# FTP server passive mode reserve
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 1700:1900 -j DNAT --to-destination 192.168.10.2:1700-1900
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p udp -m udp --dport 1700:1900 -j DNAT --to-destination 192.168.10.2:1700-1900
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 8291 -j DNAT --to-destination 192.168.10.2:8291
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 21 -j DNAT --to-destination 192.168.10.2:21
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p udp -m udp --dport 47 -j DNAT --to-destination 192.168.10.2:47
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 47 -j DNAT --to-destination 192.168.10.2:47
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 111 -j DNAT --to-destination 192.168.10.2:111
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p udp -m udp --dport 111 -j DNAT --to-destination 192.168.10.2:111
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p udp -m udp --dport 443 -j DNAT --to-destination 192.168.10.2:443
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.10.2:443
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 1194 -j DNAT --to-destination 192.168.10.2:1194
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.10.2:80
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 5001:5949 -j DNAT --to-destination 192.168.10.2:5001-5949
# Zabbix monitoring
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 10050:10051 -j DNAT --to-destination 192.168.10.2:10050-10051
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p udp -m udp --dport 161:162 -j DNAT --to-destination 192.168.10.2:161-162
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 10052:10060 -j DNAT --to-destination 192.168.10.2:10052-10060
# FTP Openmediavault
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 60000:65534 -j DNAT --to-destination 192.168.10.2:60000-65534
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 81:100 -j DNAT --to-destination 192.168.10.2:81-100
-A PREROUTING -d 95.216.21.108/26 -i enp41s0 -p tcp -m tcp --dport 20:21 -j DNAT --to-destination 192.168.10.2:20-21

-A PREROUTING -i enp41s0 -p gre -d 95.216.21.108/26 -j DNAT --to-destination 192.168.10.2
-A POSTROUTING -s 192.168.0.0/16 -o enp41s0 -j MASQUERADE
COMMIT
# Completed on Sun Nov 28 20:43:13 2021
